--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 /*.iml
 /Exercise441/out/
 /Exercise441/.idea/
+
+### Scala ###
+*.class
+*.log
+
+# sbt specific
+.cache/
+.history/
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+
